# ocaml-inotify

./: .gitignore  .travis.yml  CHANGES.md  Inotify.html  Lwt_inotify.html  Makefile  README  README.md  _oasis  _tags  api.odocl  dune-project  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  inotify-eio.opam  inotify-eio.opam.template  inotify.opam  myocamlbuild.ml  opam  setup.data  setup.ml  type_Inotify.html  type_Lwt_inotify.html
.github/workflows/: gh-pages.yml  main.yml
inotify/: index.html
inotify-eio/: index.html
inotify-eio/Eio_inotify/: index.html
inotify/Inotify/: index.html
inotify/Lwt_inotify/: index.html
lib/: META  dune  eio_inotify.ml  eio_inotify.mli  inotify-lwt.mllib  inotify.ml  inotify.mldylib  inotify.mli  inotify_stubs.c  inotify_stubs.h  libinotify_stubs.clib  lwt_inotify.ml  lwt_inotify.mli
lib_test/: dune  helper.ml  test_inotify.ml  test_inotify_eio.ml  test_inotify_lwt.ml
test/: runtests.sh  test_inotify.ml
